syntax = "proto3";

package user;

option go_package = "/user";  // Tambahkan ini!

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  bool is_error = 4;
  string message = 5;  
}